{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 242,
  "lineage": "251fd33d-6fbc-47ce-6bda-ca3fb4b27820",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:521996293513:instance/i-00de32c68d91adbe4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00de32c68d91adbe4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "web1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b9be3b8c69832de8",
            "private_dns": "ip-10-0-0-148.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.148",
            "public_ip": "54.236.34.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0decfb990aa8054d7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d54305476de299d",
            "tags": {
              "Name": "docker_instance"
            },
            "tags_all": {
              "Name": "docker_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c26e22bec3a1e47"
            ]
          },
          "dependencies": [
            "aws_security_group.dock_sg",
            "aws_subnet.dock_subnet",
            "aws_vpc.dock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dock_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521996293513:internet-gateway/igw-0f0d85cde3c49fe53",
            "id": "igw-0f0d85cde3c49fe53",
            "owner_id": "521996293513",
            "vpc_id": "vpc-0c94935ced7c2b089"
          },
          "dependencies": [
            "aws_vpc.dock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dock_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521996293513:route-table/rtb-0c35f05a032f60459",
            "id": "rtb-0c35f05a032f60459",
            "owner_id": "521996293513",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0d85cde3c49fe53",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dock_route_table"
            },
            "tags_all": {
              "Name": "dock_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c94935ced7c2b089"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dock_igw",
            "aws_vpc.dock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dock_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018fefad8bddb545f",
            "route_table_id": "rtb-0c35f05a032f60459",
            "subnet_id": "subnet-04d54305476de299d"
          },
          "dependencies": [
            "aws_internet_gateway.dock_igw",
            "aws_route_table.dock_route_table",
            "aws_subnet.dock_subnet",
            "aws_vpc.dock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dock_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521996293513:security-group/sg-05c26e22bec3a1e47",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c26e22bec3a1e47",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all TCP",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-20221219062241170800000001",
            "name_prefix": "terraform-",
            "owner_id": "521996293513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dock_sg"
            },
            "tags_all": {
              "Name": "dock_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c94935ced7c2b089"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.dock_subnet",
            "aws_vpc.dock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dock_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521996293513:subnet/subnet-04d54305476de299d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d54305476de299d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "521996293513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dock_subnet"
            },
            "tags_all": {
              "Name": "dock_subnet"
            },
            "vpc_id": "vpc-0c94935ced7c2b089"
          },
          "dependencies": [
            "aws_vpc.dock_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dock_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521996293513:vpc/vpc-0c94935ced7c2b089",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d93529e6651149a5",
            "default_route_table_id": "rtb-0df6275cffae2f229",
            "default_security_group_id": "sg-0ecb3289d32af4544",
            "dhcp_options_id": "dopt-0d94647a31839d8f9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c94935ced7c2b089",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0df6275cffae2f229",
            "owner_id": "521996293513",
            "tags": {
              "Name": "dock_vpc"
            },
            "tags_all": {
              "Name": "dock_vpc"
            }
          }
        }
      ]
    }
  ]
}